# cinematch

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.json
docs/: architecture.md  data.md  experiment_report.md  model_card.md  sample_metrics.json
scripts/: batch_recommend.py  download_movielens.py  run_pipeline.py
src/cinematch/: __init__.py  artifacts.py  candidate.py  config.py  constants.py  data_loader.py  evaluation.py  features.py  inference.py  pipeline.py  preprocessing.py  ranking.py  split.py  utils.py
tests/: test_artifacts.py  test_candidate.py  test_config.py  test_data_loader.py  test_download_movielens.py  test_evaluation.py  test_features.py  test_inference.py  test_pipeline.py  test_preprocessing.py  test_ranking.py  test_split.py  test_utils.py
