[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinematch"
version = "0.1.0"
description = "Production-quality, modular MovieLens recommendation system."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CineMatch MLE" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
cinematch = "cinematch.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cinematch --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["cinematch"]

[tool.coverage.report]
show_missing = true
skip_covered = true
